create REST test with client
