# src/main/resources/webroot/swagger/chat.json
@@ -29,7 +29,7 @@
         }
       },
       "post": {
-        "operationId": "postUser",
+        "operationId": "createUser",
         "x-vertx-event-bus": "users.proxy",
         "requestBody": {
           "required": true,
@@ -42,8 +42,8 @@
           }
         },
         "responses": {
-          "200": {
-            "description": "Ok"
+          "201": {
+            "description": "Created"
           },
           "500": {
             "description": "Something wrong happened"
@@ -138,7 +138,6 @@
         },
         "additionalProperties": false,
         "required": [
-          "id",
           "name"
         ]
       }
